[1.0.0] Chat imge part1

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -67,6 +67,9 @@
     <script src="js/textAndEmojiChat.js"></script>
     <script src="js/caculateNumberMessageGroup.js"></script>
     <script src="js/typingOnOff.js"></script>
+    <script src="js/imageChat.js"></script>
+
+    
    
     caculateNotifContact.js
 
