--- a/src/views/main/home/sections/rightSide.ejs
+++ b/src/views/main/home/sections/rightSide.ejs
@@ -75,7 +75,7 @@
                     <div class="icons">
                         <a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
                         <label for="image-chat">
-                            <input type="file" id="image-chat" name="my-image-chat" class="image-chat" data-chat="<%= conversation._id %>">
+                            <input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat chat-in-group" data-chat="<%= conversation._id %>">
                             <i class="fa fa-photo"></i>
                         </label>
                         <label for="attach-chat">
@@ -137,8 +137,8 @@
                         <input type="text" class="write-chat" id="write-chat-<%= conversation._id %>" data-chat="<%= conversation._id %>">
                         <div class="icons">
                             <a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
-                            <label for="image-chat">
-                                <input type="file" id="image-chat" name="my-image-chat" class="image-chat" data-chat="<%= conversation._id %>">
+                            <label for="image-chat-<%= conversation._id %>">
+                                <input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat" data-chat="<%= conversation._id %>">
                                 <i class="fa fa-photo"></i>
                             </label>
                             <label for="attach-chat">
