--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -412,7 +412,7 @@ label:focus,
   background-color: #eceff1;
 }
 
-.list-attachs li {
+.list-attachments li {
   border-bottom: 1px solid #dfe6e9;
   width: 90%;
   height: auto;
@@ -421,7 +421,7 @@ label:focus,
   list-style-type: none;
 }
 
-.list-attachs li:hover {
+.list-attachments li:hover {
   cursor: pointer;
   background-color: #eceff1;
 }
@@ -841,7 +841,7 @@ label:focus,
 }
 
 .image-chat,
-.attach-chat {
+.attachment-chat {
   display: none !important;
 }
 
@@ -862,11 +862,11 @@ label:focus,
   max-width: 50%;
 }
 
-.bubble-attach-file {
+.bubble-attachment-file {
   background-color: #ECF0FE !important;
 }
 
-.bubble-attach-file:before {
+.bubble-attachment-file:before {
   background-color: #ECF0FE !important;
 }
 
