--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -68,6 +68,7 @@
     <script src="js/caculateNumberMessageGroup.js"></script>
     <script src="js/typingOnOff.js"></script>
     <script src="js/imageChat.js"></script>
+    <script src="js/attachmentChat.js"></script>
 
     
    
@@ -79,7 +80,7 @@
       
     <%- include("image/imageModal"); %>
      
-    <%- include("attach/attachModal"); %>
+    <%- include("attachment/attachmentModal"); %>
     
     <%- include("user/userModal"); %>
     
