--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -70,6 +70,8 @@
     <script src="js/imageChat.js"></script>
     <script src="js/attachmentChat.js"></script>
     <script src="js/videoChat.js"></script>
+    
+    <script src="js/userOnlineOffline.js"></script>
 
     
    
