--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -73,6 +73,8 @@
     
     <script src="js/userOnlineOffline.js"></script>
 
+    <script src="js/groupChat.js"></script>
+
     
    
     caculateNotifContact.js
