--- a/src/views/main/home/sections/rightSide.ejs
+++ b/src/views/main/home/sections/rightSide.ejs
@@ -74,7 +74,7 @@
                     <input type="text" class="write-chat chat-in-group" id="write-chat-<%= conversation._id %>" data-chat="<%= conversation._id %>">
                     <div class="icons">
                         <a href="#" class="icon-chat" data-chat="<%= conversation._id %>"><i class="fa fa-smile-o"></i></a>
-                        <label for="image-chat">
+                        <label for="image-chat-<%= conversation._id %>">
                             <input type="file" id="image-chat-<%= conversation._id %>" name="my-image-chat" class="image-chat chat-in-group" data-chat="<%= conversation._id %>">
                             <i class="fa fa-photo"></i>
                         </label>
